pact tests